tests/transpiler/x/java/typed_var.error
exit status 1
Main.java:5: error: variable x might not have been initialized
        System.out.println(x);
                           ^
1 error
