tests/transpiler/x/java/typed_var.java
// Generated by Mochi transpiler
public class Main {
    int x;
    public static void main(String[] args) {
        System.out.println(x);
    }
}
